[package]
name = "nickel_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio = "0.4.1"
nickel = "0.11.0"
rmodbus = "0.6.4"
rustorm = { version = "0.20.0", features = ["with-sqlite"] }
serde = { version = "1.0.145", features = ["derive", "serde_derive"] }
serde_derive = "1.0.145"
serde_json = "1.0.87"
serial = "0.4.0"
